{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 37,
  "lineage": "75dc5bbe-4274-a84d-a134-861e4863c855",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "coursera-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group/sg-0cec7f7503b27bc1f",
            "description": "Allow http inbound traffic and all outbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "module-06"
                ]
              }
            ],
            "id": "sg-0cec7f7503b27bc1f",
            "name": "allow_http",
            "tags": {
              "Name": "module-06",
              "proto": "http"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:vpc/vpc-016e2d2cf1128bff9",
            "cidr_block": "172.32.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c0906081c050c500",
                "cidr_block": "172.32.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c10d875323251217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016e2d2cf1128bff9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ccb6a8856e180f74",
            "owner_id": "343902318256",
            "tags": {
              "Name": "module-06"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:internet-gateway/igw-0d33d8e8560b59497",
            "id": "igw-0d33d8e8560b59497",
            "owner_id": "343902318256",
            "tags": {
              "Name": "module-06"
            },
            "tags_all": {
              "Name": "module-06"
            },
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343902318256:loadbalancer/app/jp-elb/36c61ea56d858f5e",
            "arn_suffix": "app/jp-elb/36c61ea56d858f5e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jp-elb-2111883613.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:343902318256:loadbalancer/app/jp-elb/36c61ea56d858f5e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jp-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cec7f7503b27bc1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e0bfd37205386f3"
              },
              {
                "subnet_id": "subnet-09a5a475ffc6b9220"
              },
              {
                "subnet_id": "subnet-0b6ca223ba12bfa46"
              }
            ],
            "subnets": [
              "subnet-08e0bfd37205386f3",
              "subnet-09a5a475ffc6b9220",
              "subnet-0b6ca223ba12bfa46"
            ],
            "tags": {
              "Name": "module-06"
            },
            "tags_all": {
              "Name": "module-06"
            },
            "vpc_id": "vpc-016e2d2cf1128bff9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343902318256:listener/app/jp-elb/36c61ea56d858f5e/6c2975b99474ab90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:343902318256:targetgroup/jp-tg/d764e8194a530b0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:343902318256:listener/app/jp-elb/36c61ea56d858f5e/6c2975b99474ab90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:343902318256:loadbalancer/app/jp-elb/36c61ea56d858f5e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.alb-lb-tg",
            "aws_security_group.allow_http",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:343902318256:targetgroup/jp-tg/d764e8194a530b0e",
            "arn_suffix": "targetgroup/jp-tg/d764e8194a530b0e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:343902318256:targetgroup/jp-tg/d764e8194a530b0e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.allow_http",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d9fa7987f3f4b13",
            "original_route_table_id": "rtb-0ccb6a8856e180f74",
            "route_table_id": "rtb-0dd894b0bed4bea0c",
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:route-table/rtb-0dd894b0bed4bea0c",
            "id": "rtb-0dd894b0bed4bea0c",
            "owner_id": "343902318256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d33d8e8560b59497",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "module-06"
            },
            "tags_all": {
              "Name": "module-06"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a97f31f6f1d862",
            "route_table_id": "rtb-0dd894b0bed4bea0c",
            "subnet_id": "subnet-0b6ca223ba12bfa46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0303ee664160ae00e",
            "route_table_id": "rtb-0dd894b0bed4bea0c",
            "subnet_id": "subnet-09a5a475ffc6b9220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab2f9b0a91a7abe",
            "route_table_id": "rtb-0dd894b0bed4bea0c",
            "subnet_id": "subnet-08e0bfd37205386f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.private",
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group/sg-0cec7f7503b27bc1f",
            "description": "Allow http inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0cec7f7503b27bc1f",
            "ingress": [],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "343902318256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "module-06",
              "proto": "http"
            },
            "tags_all": {
              "Name": "module-06",
              "proto": "http"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:subnet/subnet-0b6ca223ba12bfa46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.32.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6ca223ba12bfa46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343902318256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2a"
            },
            "tags_all": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2a"
            },
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:subnet/subnet-09a5a475ffc6b9220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.32.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5a475ffc6b9220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343902318256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2b"
            },
            "tags_all": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2b"
            },
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:subnet/subnet-08e0bfd37205386f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.32.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e0bfd37205386f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343902318256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2c"
            },
            "tags_all": {
              "Name": "module-06",
              "Type": "private",
              "Zone": "us-east-2c"
            },
            "vpc_id": "vpc-016e2d2cf1128bff9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project",
            "data.aws_availability_zones.available",
            "data.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:vpc/vpc-016e2d2cf1128bff9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-0a211c3073c40fcd1",
            "default_route_table_id": "rtb-0ccb6a8856e180f74",
            "default_security_group_id": "sg-00991d2c00935ddf4",
            "dhcp_options_id": "dopt-0c10d875323251217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016e2d2cf1128bff9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ccb6a8856e180f74",
            "owner_id": "343902318256",
            "tags": {
              "Name": "module-06"
            },
            "tags_all": {
              "Name": "module-06"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group-rule/sgr-097dd89bbdf6b31da",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-097dd89bbdf6b31da",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cec7f7503b27bc1f",
            "security_group_rule_id": "sgr-097dd89bbdf6b31da",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group-rule/sgr-05007ae9fe926b10b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05007ae9fe926b10b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cec7f7503b27bc1f",
            "security_group_rule_id": "sgr-05007ae9fe926b10b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group-rule/sgr-0bd60c128d57cf903",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0bd60c128d57cf903",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cec7f7503b27bc1f",
            "security_group_rule_id": "sgr-0bd60c128d57cf903",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343902318256:security-group-rule/sgr-093ecb130671aeda0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-093ecb130671aeda0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cec7f7503b27bc1f",
            "security_group_rule_id": "sgr-093ecb130671aeda0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.project"
          ]
        }
      ]
    }
  ]
}